# ilogtail

./: README.md  go.mod  go.sum  plugins.yml
core/: CMakeLists.txt
core/app_config/: AppConfig.cpp  AppConfig.h
core/app_config/attributes/: AttributesProvider.cpp  AttributesProvider.h  CMakeLists.txt
core/application/: Application.cpp
core/collection_pipeline/plugin/: PluginRegistry.cpp  PluginRegistry.h
core/common/: EncodingConverter.cpp
core/config/common_provider/: CMakeLists.txt  (+2 more)
core/config_server_pb_v2/: CMakeLists.txt  agent.pb.cc  agent.pb.h
core/go_pipeline/: CMakeLists.txt  LogtailPlugin.cpp  LogtailPlugin.h
core/monitor/: CMakeLists.txt  LogLineCount.cpp  LogtailAlarm.cpp  LogtailMetric.cpp  LogtailMetric.h  MetricExportor.cpp  MetricExportor.h  Monitor.cpp
core/plugin/: PluginRegistry.cpp
core/profile_sender/: ProfileSender.h
core/provider/: CMakeLists.txt  Provider.cpp  Provider.h  provider.cpp  provider.h
pkg/: go.mod
pkg/helper/: local_context.go  pool_helper.go  pool_helper_test.go  self_metric_imp_v2.go  self_metric_vector_impl.go
pkg/models/: common.go  common_test.go  factory.go  metrics.go  slice.go  slice_test.go
pkg/pipeline/: context.go  control.go  self_metric.go
pkg/selfmonitor/: metrics_record.go  metrics_record_test.go
plugin_main/: plugin_export.go  plugin_main_test.go
pluginmanager/: context_imp.go  metric_export.go  plugin_manager.go  plugin_runner_helper.go  plugin_runner_test.go  plugin_runner_v1.go  plugin_runner_v2.go  plugin_wrapper_service_v2.go  self_telemetry_statistics.go
test/: go.sum
(+20 files in other folders)
